# AutoHotkey-HID-dll

./: CMakeLists.txt  README.md  test.ahk2  vcpkg.json
src/AutoHotkey-HID/: HID.idl  HidDevice.h  HidLib.h  PrecompiledHeader.h  TestClass.h  main.cpp  resource.rc
src/AutoHotkey-HID/Utils/: AutoHotkeyFunction.h  ComUtils.h  StringUtils.h
src/test/: test.ahk2
